# persona-data

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
adding-a-dataset/: index.html
datasets/: index.html
docs/: adding-a-dataset.md  datasets.md  index.md  nemotron_personas.md  persona_guess.md  prompts.md  synth_persona.md
nemotron_personas/: index.html
persona_guess/: index.html
prompts/: index.html
search/: search_index.json
src/persona_data/: environment.py  nemotron_personas.py  persona_guess.py  prompts.py  synth_persona.py
synth_persona/: index.html
tests/: smoke_test.py  test_datasets.py
