[project]
name = "persona-data"
version = "0.1.0"
description = "Shared dataset loading and prompt formatting for implicit-personalization projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.30.0",
    "python-dotenv>=1.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

# NOTE: Current choice for the build system
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persona_data"]
