[project]
name = "persona-data"
version = "0.2.2"
description = "Shared dataset loading and prompt formatting for implicit-personalization projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.30.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"
